- Display user chosen Favorites as an Oneoffixx template group. [Rotonen]
- Include filename in the livesearch endpoint results. [phgross]
- Prevent tasks from being created as private or switched to private when feature is not enabled. [Rotonen, phgross]
- Bump ftw.mail to 2.6.0 to get error logging on inbound mail failures. [lgraf]
- Handle complex URLs as titles on journal PDF exports. [Rotonen]
- Add documentation for documents endpoints (checkin/out, locking, versions) [phgross]
- Move translation overrides for ftw.mail from og.mail to og.base. [lgraf]
- Add solrsearch REST API endpoint. [phgross]
- Add webactions in user menu. [njohner]
- Add webaction action-buttons for documents, tasks and proposals. [njohner]
- Add webaction actions-menu items. [njohner]
- Add webaction title-buttons. [njohner]
- Add WebActionsProvider. [njohner]
- Add mapping between public and gever permissions. [njohner]
- Disable CSRF protect on webaction api post requests. [njohner]
- Warn the user on overviews and overlays of trashed mails or documents. [Rotonen]
- Include `include_root` parameter to `@navigation` endpoint to include the root object to the tree. [elioschmutz]
- Include `root_interface` and `content_interfaces` parameter to `@navigation` endpoint to customize the navigation items [elioschmutz]
- Include `@type`, `current` and `current_tree` property to `@navigation`-items. [elioschmutz]
- Add webaction in the add-menu of folderish content types. [njohner]
- Update plone.rest api to 3.7.2. [mathias.leimgruber]
- Respect tabbedview settings when generating an task or dossier excel export. [phgross]
- Exclusively handle templates on Committee and not on CommitteeContainer anymore. [njohner]
- Extend @listing endpoint with `tasks`-listing. [elioschmutz]
- Add option not to revoke permissions associated with a task when closing it. [njohner]
- Respect the local roles and the inheritance thereof of dossier templates. [Rotonen]